--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 	
-	<!-- Global site tag (gtag.js) - Google Ads: 10828951043 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10828951043"></script>
+	<!-- Event snippet for JD conversion page -->
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-10828951043');
+  gtag('event', 'conversion', {
+      'send_to': 'AW-10828951043/BsKvCJuFv8UDEIPc0qso',
+      'transaction_id': ''
+  });
 </script>
+>
 
 <head>
 	<meta charset="UTF-8">
